# FintechRiskGuardAI

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  MEDIUM_POST.md  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_SETUP.md  README.md  RISK_SCORING_SYSTEM.md  pyproject.toml  requirements.txt  start.sh  stop.sh
.claude/: settings.local.json
examples/: demo.py
local_agent_framework/: __init__.py
local_agent_framework/core/: __init__.py  agent.py  memory.py  safety.py  task.py  team.py  tools.py
microservices/: README.md  docker-compose.yml  run_all.py  start-services.sh  stop-services.sh  test_microservices.py
microservices/agent-service/: Dockerfile  main.py
microservices/email-service/: main.py
microservices/gateway/: Dockerfile  main.py
microservices/gateway/static/: app.js  index.html  styles.css
microservices/memory-service/: Dockerfile  main.py
microservices/risk-service/: main.py
microservices/shared/: database.py  models.py
microservices/task-service/: Dockerfile  main.py
